<resources>
    <string name="app_name">拱拱</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="default_username">亲爱的拱拱</string>
    <string name="default_stu_num">12345678</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="logining">正在登录</string>
    <string name="pls_wait">请稍候…</string>

    <string name="refresh">刷新</string>
    <string name="about">关于</string>
    <string name="set_up">设置</string>
    <string name="share">分享</string>

    <string name="count_down">倒计时</string>
    <string name="count_down_title">湘大倒计时</string>

    <string name="sid">学号</string>
    <string name="password">密码</string>
    <string name="input_password">输入密码</string>
    <string name="password_is_wrong">密码错误</string>
    <string name="confirm">确认</string>

    <string name="ecard">校园卡</string>
    <string name="click_get">点击获取</string>
    <string name="balance">余额：</string>
    <string name="unclaimed">待领：</string>
    <string name="default_money">-- --</string>

    <string name="library">图书馆</string>
    <string name="library_name">姓名：</string>
    <string name="library_debt">欠款：</string>
    <string name="library_start_time">办卡时间：</string>
    <string name="library_end_time">到期时间：</string>
    <string name="library_rent">借书：</string>
    <string name="library_status_0">本馆借出</string>
    <string name="library_status_1">本馆续借</string>
    <string name="library_status_2">过期暂停</string>
    <string name="library_renew">续借</string>
    <string name="library_renewed">已续借</string>
    <string name="library_tip">Tip：借书超过规定时间未还，图书馆将扣费，0.01元/天</string>

    <string name="xtu_network">校园网</string>
    <string name="xtu_network_status">状态：</string>
    <string name="xtu_network_balance">余额：</string>
    <string name="xtu_network_packagex">套餐：</string>
    <string name="xtu_network_next_statement_date">下次扣费时间：</string>

    <!--second fragment-->
    <string name="cha">查水表</string>
    <string name="name">姓名</string>
    <string name="card">银行卡</string>
    <string name="benbu">本部</string>
    <string name="xingxiang">兴湘</string>
    <string name="search">查找</string>
    <string name="no_result">无搜索结果</string>

    <!--查成绩-->
    <string name="grade">查成绩</string>

    <!-- Menu Text-->

    <string name="top_index">首页</string>
    <string name="function">功能</string>
    <string name="found">发现</string>


    <!-- swzl_toolbar_button -->

    <string name="swzl_lost">失物</string>
    <string name="swzl_get">招领</string>
    <string name="swzl_back">返回</string>
    <string name="swzl_publish">我要发布</string>
    <string name="swzl_title">失物招领</string>
    <!-- swzl form textview -->
    <string name="swzl_lost_thing">我丢了东西了</string>
    <string name="swzl_get_thing">我捡到东西了</string>
    <string name="swzl_is_ecard">是否为校园卡</string>
    <string name="swzl_publish_title">信息发布</string>
    <string name="swzl_location">捡到/丢失地点:</string>
    <string name="swzl_location_hint">填写你丢失/捡到地点</string>
    <string name="swzl_thing_name">物品名称:</string>
    <string name="swzl_thing_name_hint">请填写该物品名称</string>
    <string name="swzl_announcer">发布人:</string>
    <string name="swzl_announcer_hint">请填写你的信息</string>
    <string name="swzl_description">物品描述:</string>
    <string name="swzl_mobile">手机号码:</string>
    <string name="swzl_mobile_hint">联系手机号码</string>
    <string name="swzl_bank_card">银行卡号:</string>
    <string name="swzl_bank_card_hint">该卡的银行卡号</string>
    <string name="swzl_submit_confirm">确定提交</string>
    <string name="swzl_publish_time">发布时间：</string>
    <string name="swzl_search">搜索</string>
    <string name="swzl_search_hint">输入您想找的东西</string>
    <string name="swzl_nomore_data">再怎么刷也没数据啦╮(╯_╰)╭～～~~</string>
    <string name="swzl_show_detail">查看详情</string>

    <string name="swzl_item_title_str">TEST STRING</string>

    <string name="swzl_search_tag_lost">【失物】</string>
    <string name="swzl_search_tag_get">【招领】</string>

    <string name="swzl_search_non_input">请输入关键字！</string>
    <string name="err_msg__1">Hash码错误，请联系官方QQ</string>
    <string name="err_msg_1">失败：密码错误</string>
    <string name="err_msg_2">失败：获取超时，请重试</string>
    <string name="err_msg_3">教务系统无法连接，请等待教务系统恢复</string>
    <string name="err_msg_4">失败：未知错误</string>
    <string name="err_msg_5">未找到此学生</string>
    <string name="err_msg_6">已续借</string>
    <string name="err_msg_7">图书号错误</string>
    <string name="err_msg_65535">失败：缺少参数</string>


    <!-- fresh listView attention-->

    <string name="fresh_listView_pullTip">下拉可以刷新</string>
    <string name="fresh_listView_releaseTip">松开即可刷新</string>
    <string name="fresh_listView_freshNow">正在刷新</string>
    <string name="fresh_listView_freshErro">刷新失败，请重试！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_publish_swzl">PublishSwzlActivity</string>
    <string name="title_activity_article_list">ArticleListActivity</string>
    <string name="action_settings">Settings</string>

    <!-- article list -->
    <string name="data_loding">数据加载中...</string>
    <string name="article_info_title">资讯</string>
    <string name="article_item__testStr">HHHHHHHHHH</string>
    <string name="article_item_user">发布人：</string>
    <string name="article_item_updatetime">发布时间：</string>
    <string name="article_item_description">摘要：</string>
    <string name="article_item_acttime">举行时间</string>

    <string name="article_info_school">校内资讯</string>
    <string name="article_info_calender">活动日历</string>

    <string name="article_activity_act_time">活动时间</string>
    <string name="article_activity_introduction">活动简介</string>
    <!--course list  -->
    <string name="course_list_today">今日课程表</string>
    <string name="title_activity_course_week_selector">CourseWeekSelectorActivity</string>

    <!--week selector -->
    <string name="week_select_title">选择周数</string>


    <!-- info title -->
    <string name="second_hand_title">二手街</string>
    <string name="activity_title">活动资讯</string>
    <string name="info_title">资讯频道</string>


    <!--about us -->
    <string name="about_us_check_update">检查更新</string>
    <string name="about_us_open_source_permission">开放源代码许可</string>
    <string name="about_us_detail">关于我们</string>
    <string name="about_us_join_us">加入我们</string>
    <string name="about_us">关于</string>
    
    
    <!-- grade detail -->
    <string name="grade_detail_course_name">课程名称</string>
    <string name="grade_detail_type">课程类型：</string>
    <string name="grade_detail_credit">学分：</string>
    <string name="grade_detail_daily_grade">平时成绩：</string>
    <string name="grade_detail_exam_grade">考试成绩：</string>
    <string name="grade_detail_comp_grade">最终成绩：</string>


    <string name="get_data_now">翼宝正在获取数据。</string>
</resources>
