<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/swzl_attention_size"
        android:text="@string/article_item__testStr"
        android:id="@+id/article_item_title"
        android:gravity="center_vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/swzl_item_thing_padding">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/article_item_user"
            android:id="@+id/article_item_username"
            android:layout_weight="0.4"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/article_item_updatetime"
            android:text="@string/article_item_updatetime"
            android:layout_weight="0.6"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:id="@+id/article_item_description"
        android:layout_marginTop="@dimen/swzl_item_thing_padding"
        android:text="@string/article_item_description"
        />

</LinearLayout>