<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/interval_default"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.6">

        <com.rey.material.widget.EditText
            android:id="@+id/til_sid"
            style="@style/BlackColorLightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sid"
            android:inputType="text"
            app:et_inputId="@+id/et_sid"
            app:et_supportMode="none" />

        <com.rey.material.widget.EditText
            android:id="@+id/til_name"
            style="@style/BlackColorLightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            app:et_inputId="@+id/et_card"
            app:et_supportMode="none" />

        <com.rey.material.widget.EditText
            android:id="@+id/til_card"
            style="@style/BlackColorLightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card"
            android:inputType="text"
            app:et_inputId="@+id/et_card"
            app:et_supportMode="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/interval_default"
            android:gravity="center"
            android:orientation="horizontal">


            <com.rey.material.widget.CheckBox
                android:id="@+id/check_benbu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center_vertical"
                android:text="@string/benbu"
                app:cbd_strokeColor="@color/colorPrimary" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/check_xingxiang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center_vertical"
                android:text="@string/xingxiang"
                app:cbd_strokeColor="@color/colorPrimary" />


            <com.rey.material.widget.Button
                android:id="@+id/btn_search"
                style="@style/LightRaiseColorButtonRippleStyle"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="right"
                android:layout_margin="@dimen/interval_10"
                android:background="@drawable/btn_with_bgcolor"
                android:text="@string/search" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_searchmate"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>