<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginTop="@dimen/interval_default"
    android:layout_marginBottom="@dimen/interval_default"
    android:id="@+id/swzl_item_view"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swzl_item_things"
        android:textSize="@dimen/swzl_item_thing_title"
        android:text="@string/swzl_thing_name"
        android:textColor="@color/black"
        android:padding="@dimen/swzl_item_thing_padding"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/swzl_item_location"
            android:text="@string/swzl_location"
            android:textColor="@color/swzl_item_text_grey"
            android:padding="@dimen/swzl_item_thing_padding"
            android:textSize="@dimen/swzl_item_normal_textsize"
            android:layout_weight="0.6"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/swzl_item_announcer"
            android:text="@string/swzl_announcer"
            android:textColor="@color/swzl_item_text_grey"
            android:textSize="@dimen/swzl_item_normal_textsize"
            android:padding="@dimen/swzl_item_thing_padding"
            android:layout_weight="0.4"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swzl_item_description"
        android:text="@string/swzl_description"
        android:textColor="@color/swzl_item_text_grey"
        android:padding="@dimen/swzl_item_thing_padding"
        android:textSize="@dimen/swzl_item_normal_textsize"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hehe"
        android:layout_gravity="right"
        android:gravity="right"
        android:paddingRight="@dimen/activity_padding"
        android:textColor="@color/swzl_item_text_grey"
        android:id="@+id/swzl_item_time"
        android:textSize="@dimen/material_design_button_font_size_mini"
        />

</LinearLayout>