<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_c"
    android:orientation="vertical"
    tools:context="com.sky31.gonggong.module.swzl.SwzlDetailActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swzl_publish_toolbar"
        toolbar:title="@string/swzl_show_detail"
        toolbar:titleTextColor="@color/white"
        toolbar:navigationIcon="@drawable/ic_arrow_back"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="@dimen/swzl_detail_font_title"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/swzl_detail_title"
        />

        <!-- -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/swzl_detail_font_etc"
                android:text="@string/swzl_announcer"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:layout_weight="0.4"
                android:id="@+id/swzl_detail_announcer"
                android:maxLines="1"
                android:ellipsize="end"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/swzl_detail_font_etc"
                android:text="@string/swzl_mobile"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:layout_weight="0.6"
                android:id="@+id/swzl_detail_mobile"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/swzl_detail_font_etc"
                android:text="@string/swzl_publish_time"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:id="@+id/swzl_detail_publish_time"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/swzl_detail_font_etc"
                android:text="@string/swzl_location"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                android:id="@+id/swzl_detail_location"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/swzl_util_marginTop"
            android:layout_marginLeft="@dimen/swzl_util_marginTop"
            android:layout_marginRight="@dimen/swzl_util_marginTop"
            android:text="@string/swzl_bank_card"
            android:id="@+id/swzl_detail_bank_card"
            android:visibility="gone"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginLeft="@dimen/swzl_util_marginTop"
            android:layout_marginRight="@dimen/swzl_util_marginTop"
            android:layout_marginTop="@dimen/swzl_util_marginTop"
            >

        </View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/swzl_util_marginTop"
            android:text="@string/swzl_description"
            android:id="@+id/swzl_detail_description"
            />
    </LinearLayout>

</LinearLayout>
